# VOS

./: CMakeLists.txt  Makefile  README.md  main.c  makefile
components/: edit.c  edit.h  icon.c  icon.h  window.c  window.h
include/: AnsiParser.h  CRTEffect.h  FontAtlas.h  Terminal.h
src/: ansi_parser.cpp  crt_effect.cpp  font_atlas.cpp  main.cpp  terminal.cpp
